--- a/.ci_support/linux_aarch64_numpy1.21python3.10.____cpython.yaml
+++ b/.ci_support/linux_aarch64_numpy1.21python3.10.____cpython.yaml
@@ -1,9 +1,19 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 c_compiler:
-- vs2019
+- gcc
+c_compiler_version:
+- '11'
+cdt_arch:
+- aarch64
+cdt_name:
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 nlopt:
 - '2.7'
 numpy:
@@ -15,7 +25,7 @@ pin_run_as_build:
 python:
 - 3.10.* *_cpython
 target_platform:
-- win-64
+- linux-aarch64
 zip_keys:
 - - python
   - numpy
