--- a/.ci_support/linux_ppc64le_numpy1.22python3.8.____73_pypy.yaml
+++ b/.ci_support/linux_ppc64le_numpy1.22python3.8.____73_pypy.yaml
@@ -1,7 +1,7 @@
 c_compiler:
 - gcc
 c_compiler_version:
-- '11'
+- '12'
 cdt_name:
 - cos7
 channel_sources:
@@ -13,13 +13,13 @@ docker_image:
 nlopt:
 - '2.7'
 numpy:
-- '1.21'
+- '1.22'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.10.* *_cpython
+- 3.8.* *_73_pypy
 target_platform:
 - linux-ppc64le
 zip_keys:
