--- a/.ci_support/linux_ppc64le_numpy1.22python3.9.____73_pypy.yaml
+++ b/.ci_support/linux_ppc64le_numpy1.22python3.9.____73_pypy.yaml
@@ -1,9 +1,9 @@
 c_compiler:
 - gcc
 c_compiler_version:
-- '11'
+- '12'
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
@@ -13,15 +13,15 @@ docker_image:
 nlopt:
 - '2.7'
 numpy:
-- '1.20'
+- '1.22'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.9.* *_cpython
+- 3.9.* *_73_pypy
 target_platform:
-- linux-64
+- linux-ppc64le
 zip_keys:
 - - python
   - numpy
