Force python version

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,14 +17,14 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ stdlib("c") }}
-    - python                                 # [build_platform != target_platform]
+    - python <3.10                           # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - cython                                 # [build_platform != target_platform]
     - numpy <2                               # [build_platform != target_platform]
   host:
     - pip
     - cython
-    - python
+    - python <3.10
     - numpy <2
     - nlopt
   run:
